2011-05-16  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (language): static, not global
	(current_language_o): global, not static
	(init_language): do not call bindtextdomain() with a nonexistent
	localedir because that it is usually called by SET-CURRENT-LANGUAGE
	with a NULL second argument
	* lispbibl.d (current_language_o) [!LANGUAGE_STATIC]: declare extern
	* spvw.d (init_memory): update initialization of O(current_language)
	* i18n.d (SET-CURRENT-LANGUAGE): use current_language_o() to set
	O(current_language)

2011-05-13  Sam Steingold  <sds@gnu.org>

	* pathname.d (possible_symlink): remove (linux 2.0.35 is long gone)

2011-05-10  Sam Steingold  <sds@gnu.org>

	* pathname.d (starp): remove
	(multiwild_char_p, singlewild_char_p, wild_char_p): use
	consistently throughout the file
	(DEF_WILD_CHECKER): new macro
	(word_wild_p, wild_p): define using it

2011-05-04  Sam Steingold  <sds@gnu.org>

	* stream.d (IS_EINVAL_EXTRA) [UNIX_SUNOS5]: add ENXIO

2011-05-04  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): replace close-hook with
	fd-hook (renamed in gnulib 2011-04-19)
	(gnulib-imported): pipe stderr to $(GNULIB_IMPORTED_LOG) too

2011-05-04  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (init_language): fix the 2011-04-10 patch (use
	strcpy instead of strcat)

2011-05-04  Sam Steingold  <sds@gnu.org>

	* symbol.d (GENTEMP): add a cast to fix g++ compilation

2011-05-04  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): add
	arpa_inet, netinet_in, inet_ntop, inet_pton
	* lispbibl.d: assume that <netinet/in.h> is always present
	* win32.d (CONNECT_NAME_T, CONNECT_CONST, CONNECT_ADDRLEN_T)
	(HAVE_NETINET_IN_H, HAVE_ARPA_INET_H, RET_INET_ADDR_TYPE)
	(INET_ADDR_SUFFIX, INET_ADDR_CONST): remove
	* socket.d: assume HAVE_ARPA_INET_H, HAVE_INET_NTOP, HAVE_INET_PTON,
	thus inet_addr() is never used
	(connect, inet_addr): remove the prototypes
	(all_digits_dots): remove the function
	* configure.in: do not call CL_CONNECT